--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "author": "senglo",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/server.ts"
+    "start": "nodemon ./src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/express": "^4.17.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.29",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^26.0.18",
+    "@types/node": "^14.14.11",
     "@types/supertest": "^2.0.10",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "node-mocks-http": "^1.9.0",
     "nodemon": "^2.0.6",
