--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "senglo",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/server.ts",
+    "start": "nodemon src/main.ts",
     "test": "jest"
   },
   "dependencies": {
@@ -14,17 +14,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.10",
     "ts-node": "^9.1.1",
-    "typeorm": "^0.2.29",
+    "typeorm": "0.2.29",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@types/jest": "^26.0.18",
-    "@types/node": "^14.14.11",
+    "@types/node": "^8.0.29",
     "@types/supertest": "^2.0.10",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
