--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/express": "^4.17.9",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.10",
     "ts-node": "^9.1.1",
+    "typedi": "^0.8.0",
     "typeorm": "0.2.29",
+    "typeorm-typedi-extensions": "^0.2.3",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.18",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^8.0.29",
     "@types/supertest": "^2.0.10",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "node-mocks-http": "^1.9.0",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4"
